src/app/globals.css
@import 'tailwindcss';
@import 'tw-animate-css';

@config '../../tailwind.config.ts';

@custom-variant dark (&:is(.dark *));

@theme {
  /* Font Family */

  /* Text Sizes and Line Heights */
  --text-display-3xl: 3.75rem;
  --text-display-3xl--line-height: 4.5rem;

  --text-display-2xl: 3rem;
  --text-display-2xl--line-height: 3.75rem;
  --text-display-2xl--letter-spacing: -2%;

  --text-display-xl: 2.5rem;
  --text-display-xl--line-height: 3rem;
  --text-display-xl--letter-spacing: -2%;

  --text-display-lg: 2.25rem;
  --text-display-lg--line-height: 2.75rem;
  --text-display-lg--letter-spacing: -2%;

  --text-display-md: 2rem;
  --text-display-md--line-height: 2.5rem;

  --text-display-sm: 1.75rem;
  --text-display-sm--line-height: 2.375rem;

  --text-display-xs: 1.5rem;
  --text-display-xs--line-height: 2.25rem;

  --text-xl: 1.25rem;
  --text-xl--line-height: 2.125rem;

  --text-lg: 1.125rem;
  --text-lg--line-height: 2rem;

  --text-md: 1rem;
  --text-md--line-height: 1.875rem;

  --text-sm: 0.875rem;
  --text-sm--line-height: 1.75rem;

  --text-xs: 0.75rem;
  --text-xs--line-height: 1.5rem;

  /* Font Weights */
  --font-weight-regular: 400;
  --font-weight-medium: 500;
  --font-weight-semibold: 600;
  --font-weight-bold: 700;
  --font-weight-extrabold: 800;

  /* Color Theme */
  --color-neutral-25: #fdfdfd;
  --color-neutral-50: #fafafa;
  --color-neutral-100: #f5f5f5;
  --color-neutral-200: #e9eaeb;
  --color-neutral-300: #d5d7da;
  --color-neutral-400: #a4a7ae;
  --color-neutral-500: #717680;
  --color-neutral-600: #535862;
  --color-neutral-700: #414651;
  --color-neutral-800: #252b37;
  --color-neutral-900: #181d27;
  --color-neutral-950: #0a0d12;

  --color-primary-100: #e5f4fb;
  --color-primary-200: #6fcfff;
  --color-primary-300: #0093dd;
  --color-primary-400: #050a1b;

  --color-base-white: #ffffff;
  --color-base-background: #0c0d0d;

  /* Radius */
  --radius-xxs: 0.125rem;
  --radius-xs: 0.25rem;
  --radius-sm: 0.375rem;
  --radius-md: 0.5rem;
  --radius-lg: 0.625rem;
  --radius-xl: 0.75rem;
  --radius-2xl: 1rem;
  --radius-3xl: 1.25rem;
  --radius-4xl: 1.5rem;

  /* Spacing */
  --spacing-xxs: 0.125rem;
  --spacing-xs: 0.25rem;
  --spacing-sm: 0.375rem;
  --spacing-md: 0.5rem;
  --spacing-lg: 0.75rem;
  --spacing-xl: 1rem;
  --spacing-2xl: 1.25rem;
  --spacing-3xl: 1.5rem;
  --spacing-4xl: 2rem;
  --spacing-5xl: 2.5rem;
  --spacing-6xl: 3rem;
  --spacing-7xl: 4rem;
  --spacing-8xl: 5rem;
  --spacing-9xl: 6rem;
  --spacing-10xl: 8rem;
  --spacing-11xl: 8.75rem;
}

/* ---------------------------------------- */
/* shadcn theme */
/* ---------------------------------------- */
:root {
  --radius: 0.625rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.129 0.042 264.695);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.129 0.042 264.695);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.129 0.042 264.695);
  --primary: oklch(0.208 0.042 265.755);
  --primary-foreground: oklch(0.984 0.003 247.858);
  --secondary: oklch(0.968 0.007 247.896);
  --secondary-foreground: oklch(0.208 0.042 265.755);
  --muted: oklch(0.968 0.007 247.896);
  --muted-foreground: oklch(0.554 0.046 257.417);
  --accent: oklch(0.968 0.007 247.896);
  --accent-foreground: oklch(0.208 0.042 265.755);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.929 0.013 255.508);
  --input: oklch(0.929 0.013 255.508);
  --ring: oklch(0.704 0.04 256.788);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.984 0.003 247.858);
  --sidebar-foreground: oklch(0.129 0.042 264.695);
  --sidebar-primary: oklch(0.208 0.042 265.755);
  --sidebar-primary-foreground: oklch(0.984 0.003 247.858);
  --sidebar-accent: oklch(0.968 0.007 247.896);
  --sidebar-accent-foreground: oklch(0.208 0.042 265.755);
  --sidebar-border: oklch(0.929 0.013 255.508);
  --sidebar-ring: oklch(0.704 0.04 256.788);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
}

/* ---------------------------------------- */
/* end of shadcn theme */
/* ---------------------------------------- */

body {
  @apply bg-white text-slate-900 dark:bg-slate-950 dark:text-neutral-50 text-sm font-normal transition-colors duration-300;

  font-family: var(--font-poppins);
}

@layer components {
  .custom-container {
    margin: 0 auto;
    @apply max-w-302 pr-6 pl-6;
  }
}

@layer utilities {
  /* flex utilities */
  .flex-center {
    @apply flex items-center justify-center;
  }

  .flex-between {
    @apply flex items-center justify-between;
  }

  .flex-start {
    @apply flex items-center justify-start;
  }
}

img {
  user-drag: none;
  -webkit-user-drag: none; /* For Safari */
  user-select: none; /* Prevent selection */
  -webkit-user-select: none; /* For Safari */
}

